correction:overflow and container width

--- a/styles/course.css
+++ b/styles/course.css
@@ -55,6 +55,10 @@
     z-index: 5;
 }
 
+.shapes-container{
+    overflow-x: hidden;
+}
+
 .last-cta{
     color: #3A0256;
 }
@@ -80,7 +84,6 @@
     flex: 1; 
     border-bottom: 20vh solid #E81F64; 
     border-right: 50vw solid transparent; 
-    overflow: hidden;
 }
 
 #left-box {
@@ -88,7 +91,6 @@
     flex: 1; 
     border-bottom: 20vh solid #E81F64;
     border-left: 50vw solid transparent;
-    overflow: hidden;
 }
 
 /* why learn section */
