--- a/styles/style.css
+++ b/styles/style.css
@@ -55,8 +55,8 @@
 .heading-img-3 {
     width: 100%;
     position: relative;
-    bottom: 120px;
-    right: 150px;
+    bottom: 160px;
+    right: 200px;
 }
 
 .hero-decription-text{
